Signature without TSA working

--- a/app/src/main/res/layouts/main_layouts/layout/signer_item.xml
+++ b/app/src/main/res/layouts/main_layouts/layout/signer_item.xml
@@ -13,9 +13,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toEndOf="@+id/imageIsSigned"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewCertDes" />
 
     <TextView
         android:id="@+id/textViewCertDes"
@@ -23,9 +23,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/imageIsSigned"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCert" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewUserLastname"
@@ -33,17 +35,19 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewCertDes"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCert" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageIsSigned"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@+id/imageCert"
-        app:layout_constraintTop_toBottomOf="@+id/textViewCert"
-        app:srcCompat="@drawable/ic_timer_black_24dp" />
+        app:srcCompat="@drawable/ic_timer_black_24dp"
+        tools:layout_editor_absoluteY="36dp" />
 
     <ImageView
         android:id="@+id/imageCert"
