--- a/app/src/main/res/layouts/user_layouts/layout/fragment_user_container.xml
+++ b/app/src/main/res/layouts/user_layouts/layout/fragment_user_container.xml
@@ -8,7 +8,7 @@
     tools:context="markens.signu.activities.NavigationActivity">
 
     <FrameLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/frameLayoutUserContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom_navigation_user">
