--- a/app/src/main/res/layouts/user_layouts/layout/fragment_user_info.xml
+++ b/app/src/main/res/layouts/user_layouts/layout/fragment_user_info.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textViewIdTag"
+            android:id="@+id/textViewUserIdTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewIdValue"
+            android:id="@+id/textViewUserIdValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -35,7 +35,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewDetailsTag"
+            android:id="@+id/textViewUserEmailTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -46,7 +46,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewEmailValue"
+            android:id="@+id/textViewUserEmailValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textViewDetailsTag"
+            android:id="@+id/textViewUserNameTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -66,7 +66,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textViewNameValue"
+            android:id="@+id/textViewUserNameValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -75,7 +75,7 @@
             app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag" />
 
         <TextView
-            android:id="@+id/textViewTSATag"
+            android:id="@+id/textViewUserLastnameTag"
             android:layout_width="match_parent"
             android:layout_height="19dp"
             android:layout_marginLeft="8dp"
@@ -85,7 +85,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textViewLastnameValue"
+            android:id="@+id/textViewUserLastnameValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -94,7 +94,7 @@
             app:layout_constraintStart_toEndOf="@+id/textViewTSATag" />
 
         <TextView
-            android:id="@+id/textViewCATag"
+            android:id="@+id/textViewUserCDTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -104,16 +104,16 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textViewCAValue"
+            android:id="@+id/textViewUserCDValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textViewCATag" />
+            app:layout_constraintStart_toEndOf="@+id/textViewUserCATag" />
 
         <TextView
-            android:id="@+id/textViewLastEditionDateTag"
+            android:id="@+id/textViewUserLastEditionDateTag"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -122,13 +122,13 @@
             android:textColor="@color/colorAccent" />
 
         <TextView
-            android:id="@+id/textViewLastEditionDateValue"
+            android:id="@+id/textViewUserLastEditionDateValue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             android:text="TextView"
-            app:layout_constraintStart_toEndOf="@+id/textViewCAValue" />
+            app:layout_constraintStart_toEndOf="@+id/textViewUserCAValue" />
 
     </LinearLayout>
 
