--- a/app/src/main/res/layouts/user_layouts/layout/activity_user_search.xml
+++ b/app/src/main/res/layouts/user_layouts/layout/activity_user_search.xml
@@ -33,7 +33,7 @@
             android:id="@+id/buttonSearchUser"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Search" />
+            android:text="@string/search" />
 
         <ListView
             android:id="@+id/listViewUsers"
