--- a/app/src/main/res/layouts/certs_layouts/layout/ks_item.xml
+++ b/app/src/main/res/layouts/certs_layouts/layout/ks_item.xml
@@ -13,7 +13,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:text="TextView"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/imageCert"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,7 +21,6 @@
         android:id="@+id/textViewUserId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:visibility="invisible" />
 
     <TextView
@@ -32,7 +30,6 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/imageCert"
         app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
@@ -61,6 +58,7 @@
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_certificate_box" />
+        app:srcCompat="@drawable/ic_certificate_box"
+        android:contentDescription="@string/keystore_desc" />
 
 </android.support.constraint.ConstraintLayout>
