--- a/app/src/main/res/layouts/layout/fragment_about.xml
+++ b/app/src/main/res/layouts/layout/fragment_about.xml
@@ -15,9 +15,9 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/textViewAbout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="About" />
+            android:text="@string/about" />
     </LinearLayout>
 </RelativeLayout>
