--- a/app/src/main/res/layouts/main_layouts/layout/pdf_item.xml
+++ b/app/src/main/res/layouts/main_layouts/layout/pdf_item.xml
@@ -52,12 +52,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textViewDetailsTag"
+                        android:id="@+id/textViewNameTag"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentTop="true"
                         android:layout_margin="4dp"
-                        android:text="Name"
+                        android:text="@string/filename"
                         android:textColor="@color/colorAccent"
                         app:layout_constraintStart_toStartOf="@+id/guideline7"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -80,12 +80,12 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textViewTSATag"
+                        android:id="@+id/textViewOwnerTag"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/textViewDetailsTag"
                         android:layout_margin="4dp"
-                        android:text="Owner"
+                        android:text="@string/owner"
                         android:textColor="@color/colorAccent"
                         app:layout_constraintStart_toStartOf="@+id/guideline7"
                         tools:layout_editor_absoluteY="56dp" />
@@ -125,7 +125,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/textViewTSATag"
                         android:layout_margin="4dp"
-                        android:text="Signers"
+                        android:text="@string/signers"
                         android:textColor="@color/colorAccent"
                         app:layout_constraintStart_toStartOf="@+id/guideline7"
                         tools:layout_editor_absoluteY="104dp" />
@@ -152,7 +152,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignTop="@+id/imageView"
-                    android:text="TextView"
                     android:visibility="invisible" />
 
             </LinearLayout>
