--- a/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_edit.xml
+++ b/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_edit.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/buttonUpdatePdf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Update" />
+                android:text="@string/update" />
 
         </LinearLayout>
     </ScrollView>
