--- a/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_sign.xml
+++ b/app/src/main/res/layouts/pdf_layouts/layout/fragment_pdf_sign.xml
@@ -24,16 +24,16 @@
             android:textColor="@color/colorRed"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Warning" />
+            android:text="@string/warning" />
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutPass"
+            android:id="@+id/textInputLayoutPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true">
 
             <EditText
-                android:id="@+id/editTextPass"
+                android:id="@+id/editTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -43,10 +43,10 @@
         </android.support.design.widget.TextInputLayout>
 
         <TextView
-            android:id="@+id/textViewSelectCertId"
+            android:id="@+id/textViewSelectKSId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select Certificate"
+            android:text="@string/select_ks"
             android:textColor="@color/colorAccent" />
 
         <RadioGroup
@@ -60,7 +60,7 @@
             android:id="@+id/buttonSignPdf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sign PDF" />
+            android:text="@string/sign_pdf" />
 
         <com.github.barteksc.pdfviewer.PDFView
             android:id="@+id/pdfView"
