--- a/app/src/main/res/layouts/user_layouts/layout/fragment_user_info.xml
+++ b/app/src/main/res/layouts/user_layouts/layout/fragment_user_info.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="Id"
+            android:text="@string/id"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="Email"
+            android:text="@string/email"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +50,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="Name"
+            android:text="@string/name"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -71,7 +69,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/textViewDetailsTag" />
 
         <TextView
@@ -80,7 +77,7 @@
             android:layout_height="19dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="Lastname"
+            android:text="@string/lastname"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -90,7 +87,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/textViewTSATag" />
 
         <TextView
@@ -99,7 +95,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="Creation Date"
+            android:text="@string/creation_date"
             android:textColor="@color/colorAccent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -109,7 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="TextView"
+            android:text=""
             app:layout_constraintStart_toEndOf="@+id/textViewUserCATag" />
 
         <TextView
@@ -118,7 +114,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="Last Edition Date"
+            android:text="@string/last_edition_date"
             android:textColor="@color/colorAccent" />
 
         <TextView
@@ -127,7 +123,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:text="TextView"
+            android:text=""
             app:layout_constraintStart_toEndOf="@+id/textViewUserCAValue" />
 
     </LinearLayout>
