--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu android:id="@+id/menuDrawer"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
@@ -7,19 +8,19 @@
         <item
             android:id="@+id/nav_pdf"
             android:icon="@drawable/ic_picture_as_pdf_black_24dp"
-            android:title="Pdf" />
+            android:title="@string/pdf" />
         <item
             android:id="@+id/nav_user"
             android:icon="@drawable/ic_account_circle_black_24dp"
-            android:title="User" />
+            android:title="@string/user" />
         <item
-            android:id="@+id/nav_cert"
+            android:id="@+id/nav_ks"
             android:icon="@drawable/ic_certificate_box"
-            android:title="Certificates" />
+            android:title="@string/ks" />
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Settings" />
+            android:title="@string/settings" />
     </group>
 
     <item android:title="Communication">
@@ -27,15 +28,15 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="@string/share" />
             <item
                 android:id="@+id/nav_about"
                 android:icon="@drawable/ic_info_outline_black_24dp"
-                android:title="About" />
+                android:title="@string/about" />
             <item
                 android:id="@+id/nav_log_out"
                 android:icon="@drawable/ic_exit_to_app_black_24dp"
-                android:title="Log out" />
+                android:title="@string/log_out" />
         </menu>
     </item>
 
